Parser/antlr/.antlr/ReDSLParser.java
// Generated from /Users/tom/git/ReDSL/Parser/antlr/ReDSLParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ReDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FILE_KEYWORD=1, FILE_BLOCK_START=2, FILE_BLOCK_END=3, PACKAGE_KEYWORD=4, 
		ID_STR=5, ID_STR_ESC_SEQ=6, WS=7, REQ_DEF=8, PARAM_START=9, TEXT_START=10, 
		REQ_DEF_WS=11, TEXT_CLOSE=12, TEXT_COMMENT=13, TEXT_WS=14, TEXT_LINE_BREAK=15, 
		TEXT_NEXT_PARA=16, TEXT_EXAMPLE_MARKER=17, TEXT_RATIO_MARKER=18, TEXT_REF_MARKER=19, 
		TEXT_RE_ID_REF=20, TEXT_URI=21, TEXT_TERM_REF=22, TEXT_START_MATH=23, 
		TEXT_ESC_SEQ=24, TEXT_CONTENT=25, PARAM_CLOSE=26, PARAM_ID=27, PARAM_EQUALS=28, 
		PARAM_STRING=29, PARAM_ID_LIST_START=30, PARAM_ID_LIST_SEP=31, PARAM_ID_LIST_END=32, 
		PARAM_BOOL=33, PARAM_NUMBER=34, PARAM_WS=35, MATH_CLOSE=36, MATH_ESC_SEQ=37, 
		MATH_CONTENT=38;
	public static final int
		RULE_parse = 0, RULE_fileBlock = 1, RULE_packageDecl = 2, RULE_requirementDecl = 3, 
		RULE_textBlock = 4, RULE_textBlockContentFirst = 5, RULE_textBlockContentNext = 6, 
		RULE_exampleDecl = 7, RULE_rationaleDecl = 8, RULE_referenceDecl = 9, 
		RULE_runningText = 10, RULE_parameterBlock = 11, RULE_paramDecl = 12, 
		RULE_stringParamDecl = 13, RULE_idParamDecl = 14, RULE_numericParamDecl = 15, 
		RULE_boolParamDecl = 16, RULE_idListParamDecl = 17, RULE_mathModeExpression = 18;
	public static final String[] ruleNames = {
		"parse", "fileBlock", "packageDecl", "requirementDecl", "textBlock", "textBlockContentFirst", 
		"textBlockContentNext", "exampleDecl", "rationaleDecl", "referenceDecl", 
		"runningText", "parameterBlock", "paramDecl", "stringParamDecl", "idParamDecl", 
		"numericParamDecl", "boolParamDecl", "idListParamDecl", "mathModeExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'file'", null, null, "'package'", null, null, null, null, "'['", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "']'", null, "'='", null, null, "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "FILE_KEYWORD", "FILE_BLOCK_START", "FILE_BLOCK_END", "PACKAGE_KEYWORD", 
		"ID_STR", "ID_STR_ESC_SEQ", "WS", "REQ_DEF", "PARAM_START", "TEXT_START", 
		"REQ_DEF_WS", "TEXT_CLOSE", "TEXT_COMMENT", "TEXT_WS", "TEXT_LINE_BREAK", 
		"TEXT_NEXT_PARA", "TEXT_EXAMPLE_MARKER", "TEXT_RATIO_MARKER", "TEXT_REF_MARKER", 
		"TEXT_RE_ID_REF", "TEXT_URI", "TEXT_TERM_REF", "TEXT_START_MATH", "TEXT_ESC_SEQ", 
		"TEXT_CONTENT", "PARAM_CLOSE", "PARAM_ID", "PARAM_EQUALS", "PARAM_STRING", 
		"PARAM_ID_LIST_START", "PARAM_ID_LIST_SEP", "PARAM_ID_LIST_END", "PARAM_BOOL", 
		"PARAM_NUMBER", "PARAM_WS", "MATH_CLOSE", "MATH_ESC_SEQ", "MATH_CONTENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReDSLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public List<FileBlockContext> fileBlock() {
			return getRuleContexts(FileBlockContext.class);
		}
		public FileBlockContext fileBlock(int i) {
			return getRuleContext(FileBlockContext.class,i);
		}
		public List<PackageDeclContext> packageDecl() {
			return getRuleContexts(PackageDeclContext.class);
		}
		public PackageDeclContext packageDecl(int i) {
			return getRuleContext(PackageDeclContext.class,i);
		}
		public List<RequirementDeclContext> requirementDecl() {
			return getRuleContexts(RequirementDeclContext.class);
		}
		public RequirementDeclContext requirementDecl(int i) {
			return getRuleContext(RequirementDeclContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FILE_KEYWORD:
				{
				setState(39); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(38);
					fileBlock();
					}
					}
					setState(41); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==FILE_KEYWORD );
				}
				break;
			case PACKAGE_KEYWORD:
			case REQ_DEF:
				{
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(45);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case PACKAGE_KEYWORD:
						{
						setState(43);
						packageDecl();
						}
						break;
					case REQ_DEF:
						{
						setState(44);
						requirementDecl();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(47); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==PACKAGE_KEYWORD || _la==REQ_DEF );
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileBlockContext extends ParserRuleContext {
		public TerminalNode FILE_KEYWORD() { return getToken(ReDSLParser.FILE_KEYWORD, 0); }
		public TerminalNode ID_STR() { return getToken(ReDSLParser.ID_STR, 0); }
		public TerminalNode FILE_BLOCK_START() { return getToken(ReDSLParser.FILE_BLOCK_START, 0); }
		public TerminalNode FILE_BLOCK_END() { return getToken(ReDSLParser.FILE_BLOCK_END, 0); }
		public List<PackageDeclContext> packageDecl() {
			return getRuleContexts(PackageDeclContext.class);
		}
		public PackageDeclContext packageDecl(int i) {
			return getRuleContext(PackageDeclContext.class,i);
		}
		public List<RequirementDeclContext> requirementDecl() {
			return getRuleContexts(RequirementDeclContext.class);
		}
		public RequirementDeclContext requirementDecl(int i) {
			return getRuleContext(RequirementDeclContext.class,i);
		}
		public FileBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileBlock; }
	}

	public final FileBlockContext fileBlock() throws RecognitionException {
		FileBlockContext _localctx = new FileBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fileBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(FILE_KEYWORD);
			setState(52);
			match(ID_STR);
			setState(53);
			match(FILE_BLOCK_START);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PACKAGE_KEYWORD || _la==REQ_DEF) {
				{
				setState(56);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PACKAGE_KEYWORD:
					{
					setState(54);
					packageDecl();
					}
					break;
				case REQ_DEF:
					{
					setState(55);
					requirementDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(FILE_BLOCK_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclContext extends ParserRuleContext {
		public TerminalNode PACKAGE_KEYWORD() { return getToken(ReDSLParser.PACKAGE_KEYWORD, 0); }
		public TerminalNode ID_STR() { return getToken(ReDSLParser.ID_STR, 0); }
		public PackageDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDecl; }
	}

	public final PackageDeclContext packageDecl() throws RecognitionException {
		PackageDeclContext _localctx = new PackageDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(PACKAGE_KEYWORD);
			setState(64);
			match(ID_STR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequirementDeclContext extends ParserRuleContext {
		public TerminalNode REQ_DEF() { return getToken(ReDSLParser.REQ_DEF, 0); }
		public TextBlockContext textBlock() {
			return getRuleContext(TextBlockContext.class,0);
		}
		public ParameterBlockContext parameterBlock() {
			return getRuleContext(ParameterBlockContext.class,0);
		}
		public RequirementDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirementDecl; }
	}

	public final RequirementDeclContext requirementDecl() throws RecognitionException {
		RequirementDeclContext _localctx = new RequirementDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_requirementDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(REQ_DEF);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARAM_START) {
				{
				setState(67);
				parameterBlock();
				}
			}

			setState(70);
			textBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextBlockContext extends ParserRuleContext {
		public TerminalNode TEXT_START() { return getToken(ReDSLParser.TEXT_START, 0); }
		public TerminalNode TEXT_CLOSE() { return getToken(ReDSLParser.TEXT_CLOSE, 0); }
		public TextBlockContentFirstContext textBlockContentFirst() {
			return getRuleContext(TextBlockContentFirstContext.class,0);
		}
		public TerminalNode TEXT_NEXT_PARA() { return getToken(ReDSLParser.TEXT_NEXT_PARA, 0); }
		public List<TextBlockContentNextContext> textBlockContentNext() {
			return getRuleContexts(TextBlockContentNextContext.class);
		}
		public TextBlockContentNextContext textBlockContentNext(int i) {
			return getRuleContext(TextBlockContentNextContext.class,i);
		}
		public TextBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textBlock; }
	}

	public final TextBlockContext textBlock() throws RecognitionException {
		TextBlockContext _localctx = new TextBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_textBlock);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(TEXT_START);
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(73);
				textBlockContentFirst();
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(74);
						textBlockContentNext();
						}
						} 
					}
					setState(79);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEXT_NEXT_PARA) {
				{
				setState(82);
				match(TEXT_NEXT_PARA);
				}
			}

			setState(85);
			match(TEXT_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextBlockContentFirstContext extends ParserRuleContext {
		public RunningTextContext runningText() {
			return getRuleContext(RunningTextContext.class,0);
		}
		public TerminalNode TEXT_NEXT_PARA() { return getToken(ReDSLParser.TEXT_NEXT_PARA, 0); }
		public TextBlockContentFirstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textBlockContentFirst; }
	}

	public final TextBlockContentFirstContext textBlockContentFirst() throws RecognitionException {
		TextBlockContentFirstContext _localctx = new TextBlockContentFirstContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_textBlockContentFirst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEXT_NEXT_PARA) {
				{
				setState(87);
				match(TEXT_NEXT_PARA);
				}
			}

			setState(90);
			runningText();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextBlockContentNextContext extends ParserRuleContext {
		public ExampleDeclContext exampleDecl() {
			return getRuleContext(ExampleDeclContext.class,0);
		}
		public RationaleDeclContext rationaleDecl() {
			return getRuleContext(RationaleDeclContext.class,0);
		}
		public ReferenceDeclContext referenceDecl() {
			return getRuleContext(ReferenceDeclContext.class,0);
		}
		public TerminalNode TEXT_NEXT_PARA() { return getToken(ReDSLParser.TEXT_NEXT_PARA, 0); }
		public RunningTextContext runningText() {
			return getRuleContext(RunningTextContext.class,0);
		}
		public TextBlockContentNextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textBlockContentNext; }
	}

	public final TextBlockContentNextContext textBlockContentNext() throws RecognitionException {
		TextBlockContentNextContext _localctx = new TextBlockContentNextContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_textBlockContentNext);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXT_EXAMPLE_MARKER:
				{
				setState(92);
				exampleDecl();
				}
				break;
			case TEXT_RATIO_MARKER:
				{
				setState(93);
				rationaleDecl();
				}
				break;
			case TEXT_REF_MARKER:
				{
				setState(94);
				referenceDecl();
				}
				break;
			case TEXT_NEXT_PARA:
				{
				{
				setState(95);
				match(TEXT_NEXT_PARA);
				setState(96);
				runningText();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExampleDeclContext extends ParserRuleContext {
		public TerminalNode TEXT_EXAMPLE_MARKER() { return getToken(ReDSLParser.TEXT_EXAMPLE_MARKER, 0); }
		public RunningTextContext runningText() {
			return getRuleContext(RunningTextContext.class,0);
		}
		public ExampleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exampleDecl; }
	}

	public final ExampleDeclContext exampleDecl() throws RecognitionException {
		ExampleDeclContext _localctx = new ExampleDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exampleDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(TEXT_EXAMPLE_MARKER);
			setState(100);
			runningText();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RationaleDeclContext extends ParserRuleContext {
		public TerminalNode TEXT_RATIO_MARKER() { return getToken(ReDSLParser.TEXT_RATIO_MARKER, 0); }
		public RunningTextContext runningText() {
			return getRuleContext(RunningTextContext.class,0);
		}
		public RationaleDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rationaleDecl; }
	}

	public final RationaleDeclContext rationaleDecl() throws RecognitionException {
		RationaleDeclContext _localctx = new RationaleDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rationaleDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(TEXT_RATIO_MARKER);
			setState(103);
			runningText();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceDeclContext extends ParserRuleContext {
		public TerminalNode TEXT_REF_MARKER() { return getToken(ReDSLParser.TEXT_REF_MARKER, 0); }
		public RunningTextContext runningText() {
			return getRuleContext(RunningTextContext.class,0);
		}
		public ReferenceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referenceDecl; }
	}

	public final ReferenceDeclContext referenceDecl() throws RecognitionException {
		ReferenceDeclContext _localctx = new ReferenceDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_referenceDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(TEXT_REF_MARKER);
			setState(106);
			runningText();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RunningTextContext extends ParserRuleContext {
		public List<TerminalNode> TEXT_CONTENT() { return getTokens(ReDSLParser.TEXT_CONTENT); }
		public TerminalNode TEXT_CONTENT(int i) {
			return getToken(ReDSLParser.TEXT_CONTENT, i);
		}
		public List<TerminalNode> TEXT_ESC_SEQ() { return getTokens(ReDSLParser.TEXT_ESC_SEQ); }
		public TerminalNode TEXT_ESC_SEQ(int i) {
			return getToken(ReDSLParser.TEXT_ESC_SEQ, i);
		}
		public List<TerminalNode> TEXT_RE_ID_REF() { return getTokens(ReDSLParser.TEXT_RE_ID_REF); }
		public TerminalNode TEXT_RE_ID_REF(int i) {
			return getToken(ReDSLParser.TEXT_RE_ID_REF, i);
		}
		public List<TerminalNode> TEXT_TERM_REF() { return getTokens(ReDSLParser.TEXT_TERM_REF); }
		public TerminalNode TEXT_TERM_REF(int i) {
			return getToken(ReDSLParser.TEXT_TERM_REF, i);
		}
		public List<TerminalNode> TEXT_COMMENT() { return getTokens(ReDSLParser.TEXT_COMMENT); }
		public TerminalNode TEXT_COMMENT(int i) {
			return getToken(ReDSLParser.TEXT_COMMENT, i);
		}
		public List<TerminalNode> TEXT_URI() { return getTokens(ReDSLParser.TEXT_URI); }
		public TerminalNode TEXT_URI(int i) {
			return getToken(ReDSLParser.TEXT_URI, i);
		}
		public List<MathModeExpressionContext> mathModeExpression() {
			return getRuleContexts(MathModeExpressionContext.class);
		}
		public MathModeExpressionContext mathModeExpression(int i) {
			return getRuleContext(MathModeExpressionContext.class,i);
		}
		public RunningTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_runningText; }
	}

	public final RunningTextContext runningText() throws RecognitionException {
		RunningTextContext _localctx = new RunningTextContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_runningText);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TEXT_CONTENT:
					{
					setState(108);
					match(TEXT_CONTENT);
					}
					break;
				case TEXT_ESC_SEQ:
					{
					setState(109);
					match(TEXT_ESC_SEQ);
					}
					break;
				case TEXT_RE_ID_REF:
					{
					setState(110);
					match(TEXT_RE_ID_REF);
					}
					break;
				case TEXT_TERM_REF:
					{
					setState(111);
					match(TEXT_TERM_REF);
					}
					break;
				case TEXT_COMMENT:
					{
					setState(112);
					match(TEXT_COMMENT);
					}
					break;
				case TEXT_URI:
					{
					setState(113);
					match(TEXT_URI);
					}
					break;
				case TEXT_START_MATH:
					{
					setState(114);
					mathModeExpression();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT_COMMENT) | (1L << TEXT_RE_ID_REF) | (1L << TEXT_URI) | (1L << TEXT_TERM_REF) | (1L << TEXT_START_MATH) | (1L << TEXT_ESC_SEQ) | (1L << TEXT_CONTENT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterBlockContext extends ParserRuleContext {
		public TerminalNode PARAM_START() { return getToken(ReDSLParser.PARAM_START, 0); }
		public TerminalNode PARAM_CLOSE() { return getToken(ReDSLParser.PARAM_CLOSE, 0); }
		public List<ParamDeclContext> paramDecl() {
			return getRuleContexts(ParamDeclContext.class);
		}
		public ParamDeclContext paramDecl(int i) {
			return getRuleContext(ParamDeclContext.class,i);
		}
		public ParameterBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterBlock; }
	}

	public final ParameterBlockContext parameterBlock() throws RecognitionException {
		ParameterBlockContext _localctx = new ParameterBlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_parameterBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(PARAM_START);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PARAM_ID) {
				{
				{
				setState(120);
				paramDecl();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(PARAM_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamDeclContext extends ParserRuleContext {
		public StringParamDeclContext stringParamDecl() {
			return getRuleContext(StringParamDeclContext.class,0);
		}
		public IdParamDeclContext idParamDecl() {
			return getRuleContext(IdParamDeclContext.class,0);
		}
		public NumericParamDeclContext numericParamDecl() {
			return getRuleContext(NumericParamDeclContext.class,0);
		}
		public BoolParamDeclContext boolParamDecl() {
			return getRuleContext(BoolParamDeclContext.class,0);
		}
		public IdListParamDeclContext idListParamDecl() {
			return getRuleContext(IdListParamDeclContext.class,0);
		}
		public ParamDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramDecl; }
	}

	public final ParamDeclContext paramDecl() throws RecognitionException {
		ParamDeclContext _localctx = new ParamDeclContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_paramDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(128);
				stringParamDecl();
				}
				break;
			case 2:
				{
				setState(129);
				idParamDecl();
				}
				break;
			case 3:
				{
				setState(130);
				numericParamDecl();
				}
				break;
			case 4:
				{
				setState(131);
				boolParamDecl();
				}
				break;
			case 5:
				{
				setState(132);
				idListParamDecl();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringParamDeclContext extends ParserRuleContext {
		public TerminalNode PARAM_ID() { return getToken(ReDSLParser.PARAM_ID, 0); }
		public TerminalNode PARAM_EQUALS() { return getToken(ReDSLParser.PARAM_EQUALS, 0); }
		public TerminalNode PARAM_STRING() { return getToken(ReDSLParser.PARAM_STRING, 0); }
		public StringParamDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringParamDecl; }
	}

	public final StringParamDeclContext stringParamDecl() throws RecognitionException {
		StringParamDeclContext _localctx = new StringParamDeclContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_stringParamDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(PARAM_ID);
			setState(136);
			match(PARAM_EQUALS);
			setState(137);
			match(PARAM_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdParamDeclContext extends ParserRuleContext {
		public List<TerminalNode> PARAM_ID() { return getTokens(ReDSLParser.PARAM_ID); }
		public TerminalNode PARAM_ID(int i) {
			return getToken(ReDSLParser.PARAM_ID, i);
		}
		public TerminalNode PARAM_EQUALS() { return getToken(ReDSLParser.PARAM_EQUALS, 0); }
		public IdParamDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idParamDecl; }
	}

	public final IdParamDeclContext idParamDecl() throws RecognitionException {
		IdParamDeclContext _localctx = new IdParamDeclContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_idParamDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(PARAM_ID);
			setState(140);
			match(PARAM_EQUALS);
			setState(141);
			match(PARAM_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
